--- a/css/index.css
+++ b/css/index.css
@@ -20,7 +20,7 @@
 
 h1 {
     text-align: center;
-    font-size: 35px;
+    font-size: 85px;
     color: rgb(30, 150, 6);
 }
 
@@ -64,7 +64,10 @@ color: #033b1a;
 }
 
 .card-text {
-    color: rgb(123, 233, 224);
+    text-align: center;
+    font-size: 25px;
+    margin: 30px 0 30px 0;
+    color: rgb(8, 73, 68);
   }
 
 .btn-primary {
